--- a/src/main/resources/assets/chemica/lang/en_us.json
+++ b/src/main/resources/assets/chemica/lang/en_us.json
@@ -2,7 +2,7 @@
   "chemica.tooltip.battery_block.energyTooltip": "%d/%d EU",
   "chemica.tooltip.crusher.crush_button_text": "Crush!",
   "block.chemica.crusher": "Crusher",
-  "block.chemica.battery_block": "Battery Block",
+  "block.chemica.energy_box": "Energy Box",
   "itemGroup.chemica.general": "Chemica: General",
   "item.chemica.screwdriver": "Screwdriver",
   "item.chemica.battery": "Battery",
