Added ores, ingots and some basic world get

--- a/src/main/resources/assets/chemica/lang/en_us.json
+++ b/src/main/resources/assets/chemica/lang/en_us.json
@@ -12,5 +12,24 @@
   "block.chemica.malachite_ore": "Malachite Ore",
   "item.chemica.copper_ingot": "Copper Ingot",
   "block.chemica.solid_fuel_generator": "Solid Fuel Generator",
-  "chemica.tooltip.battery.stored": "Stored: %d/%d J"
+  "chemica.tooltip.battery.stored": "Stored: %d/%d J",
+  "item.chemica.aluminum_ingot": "Aluminum Ingot",
+  "item.chemica.bronze_ingot": "Bronze Ingot",
+  "item.chemica.lead_ingot": "Lead Ingot",
+  "item.chemica.magnesium_ingot": "Magnesium Ingot",
+  "item.chemica.silver_ingot": "Silver Ingot",
+  "item.chemica.steel_ingot": "Steel Ingot",
+  "item.chemica.tin_ingot": "Tin Ingot",
+  "item.chemica.zinc_ingot": "Zinc Ingot",
+  "item.chemica.wooden_gear": "Wooden Gear",
+  "block.chemica.argentite_ore": "Argentite Ore",
+  "block.chemica.chalcopyrite_ore": "Chalcopyrite Ore",
+  "block.chemica.galena_ore": "Galena Ore",
+  "block.chemica.cuprite_ore": "Cuprite Ore",
+  "block.chemica.rutile_ore": "Rutile Ore",
+  "block.chemica.pyrite_ore": "Pyrite Ore",
+  "block.chemica.silver_ore": "Silver Ore",
+  "block.chemica.sphalerite_ore": "Sphalerite Ore",
+  "block.chemica.zincite_ore": "Zincite Ore",
+  "block.chemica.cassiterite_ore": "Cassiterite Ore"
 }
