Fixed lang file

--- a/src/main/resources/assets/chemica/lang/en_us.json
+++ b/src/main/resources/assets/chemica/lang/en_us.json
@@ -47,7 +47,7 @@
   "item.chemica.coal_ore_dust": "Coal Ore Dust",
   "item.chemica.diamond_ore_dust": "Diamond Ore Dust",
   "item.chemica.gold_ore_dust": "Gold Ore Dust",
-  "item.chemica.redstone_ore_dust": "Redstone Ore Dust".
+  "item.chemica.redstone_ore_dust": "Redstone Ore Dust",
   "item.chemica.iron_ore_dust": "Iron Ore Dust",
   "item.chemica.malachite_ore_dust": "Malachite Ore Dust"
 }
