nice commit with nice changes

--- a/src/main/resources/assets/chemica/lang/en_us.json
+++ b/src/main/resources/assets/chemica/lang/en_us.json
@@ -8,6 +8,7 @@
   "itemGroup.chemica.ores": "Chemica: Ores",
   "itemGroup.chemica.materials": "Chemica: Materials",
   "itemGroup.chemica.items": "Chemica: Items",
+  "itemGroup.chemica.building_blocks": "Chemica: Building Blocks",
   "item.chemica.screwdriver": "Screwdriver",
   "item.chemica.battery": "Battery",
   "item.chemica.tester": "Tester",
@@ -16,6 +17,11 @@
   "item.chemica.copper_ingot": "Copper Ingot",
   "block.chemica.solid_fuel_generator": "Solid Fuel Generator",
   "block.chemica.stone_alloy_smelter": "Stone Alloy Smelter",
+  "block.chemica.beehive_oven_control": "Beehive Oven Control Block",
+  "block.chemica.fireproof_bricks": "Fireproof Bricks",
+  "block.chemica.fireproof_brick_slab": "Fireproof Brick Slab",
+  "block.chemica.fireproof_brick_stairs": "Fireproof Brick Stairs",
+  "block.chemica.fireproof_brick_wall": "Fireproof Brick Wall",
   "chemica.tooltip.battery.stored": "Stored: %d/%d J",
   "item.chemica.aluminum_ingot": "Aluminum Ingot",
   "item.chemica.bronze_ingot": "Bronze Ingot",
