--- a/src/main/resources/assets/chemica/lang/en_us.json
+++ b/src/main/resources/assets/chemica/lang/en_us.json
@@ -22,6 +22,10 @@
   "block.chemica.fireproof_brick_slab": "Fireproof Brick Slab",
   "block.chemica.fireproof_brick_stairs": "Fireproof Brick Stairs",
   "block.chemica.fireproof_brick_wall": "Fireproof Brick Wall",
+  "block.chemica.sandstone_bricks": "Sandstone Bricks",
+  "block.chemica.sandstone_brick_slab": "Sandstone Brick Slab",
+  "block.chemica.sandstone_brick_stairs": "Sandstone Brick Stairs",
+  "block.chemica.sandstone_brick_wall": "Sandstone Brick Wall",
   "chemica.tooltip.battery.stored": "Stored: %d/%d J",
   "item.chemica.aluminum_ingot": "Aluminum Ingot",
   "item.chemica.bronze_ingot": "Bronze Ingot",
