Still fixing beehive oven.

--- a/src/main/resources/assets/chemica/lang/en_us.json
+++ b/src/main/resources/assets/chemica/lang/en_us.json
@@ -1,7 +1,10 @@
 {
+  "label.chemica.beehive_oven": "Beehive Oven",
   "chemica.tooltip.battery_block.energyTooltip": "%d/%d J",
   "chemica.tooltip.crusher.crush_button_text": "Crush!",
   "chemica.tooltip.beehive_oven.temperatureTooltip": "%d/%d °C",
+  "chemica.tooltip.beehive_oven.not_complete": "Multiblock is not ready. Check the structure.",
+  "chemica.tooltip.beehive_oven.complete": "Beehive oven is ready.",
   "block.chemica.crusher": "Crusher",
   "block.chemica.energy_box": "Energy Box",
   "itemGroup.chemica.general": "Chemica: General",
