Still removing unplanned ores and blocks

--- a/src/main/resources/assets/chemica/lang/en_us.json
+++ b/src/main/resources/assets/chemica/lang/en_us.json
@@ -16,7 +16,6 @@
   "item.chemica.battery": "Battery",
   "item.chemica.tester": "Tester",
   "block.chemica.crank": "Crank",
-  "block.chemica.malachite_ore": "Malachite Ore",
   "item.chemica.copper_ingot": "Copper Ingot",
   "block.chemica.solid_fuel_generator": "Solid Fuel Generator",
   "block.chemica.stone_alloy_smelter": "Stone Alloy Smelter",
@@ -30,39 +29,12 @@
   "block.chemica.sandstone_brick_stairs": "Sandstone Brick Stairs",
   "block.chemica.sandstone_brick_wall": "Sandstone Brick Wall",
   "chemica.tooltip.battery.stored": "Stored: %d/%d J",
-  "item.chemica.aluminum_ingot": "Aluminum Ingot",
-  "item.chemica.bronze_ingot": "Bronze Ingot",
-  "item.chemica.lead_ingot": "Lead Ingot",
-  "item.chemica.magnesium_ingot": "Magnesium Ingot",
-  "item.chemica.silver_ingot": "Silver Ingot",
-  "item.chemica.steel_ingot": "Steel Ingot",
-  "item.chemica.tin_ingot": "Tin Ingot",
   "item.chemica.zinc_ingot": "Zinc Ingot",
   "item.chemica.wooden_gear": "Wooden Gear",
-  "block.chemica.argentite_ore": "Argentite Ore",
-  "block.chemica.chalcopyrite_ore": "Chalcopyrite Ore",
-  "block.chemica.galena_ore": "Galena Ore",
-  "block.chemica.cuprite_ore": "Cuprite Ore",
-  "block.chemica.rutile_ore": "Rutile Ore",
-  "block.chemica.pyrite_ore": "Pyrite Ore",
-  "block.chemica.silver_ore": "Silver Ore",
-  "block.chemica.sphalerite_ore": "Sphalerite Ore",
   "block.chemica.zincite_ore": "Zincite Ore",
-  "block.chemica.cassiterite_ore": "Cassiterite Ore",
-  "item.chemica.argentite_ore_dust": "Argentite Ore Dust",
-  "item.chemica.chalcopyrite_ore_dust": "Chalcopyrite Ore Dust",
-  "item.chemica.galena_ore_dust": "Galena Ore Dust",
-  "item.chemica.cuprite_ore_dust": "Cuprite Ore Dust",
-  "item.chemica.rutile_ore_dust": "Rutile Ore Dust",
-  "item.chemica.pyrite_ore_dust": "Pyrite Ore Dust",
-  "item.chemica.silver_ore_dust": "Silver Ore Dust",
-  "item.chemica.sphalerite_ore_dust": "Sphalerite Ore Dust",
   "item.chemica.zincite_ore_dust": "Zincite Ore Dust",
-  "item.chemica.cassiterite_ore_dust": "Cassiterite Ore Dust",
   "item.chemica.coal_ore_dust": "Coal Ore Dust",
   "item.chemica.diamond_ore_dust": "Diamond Ore Dust",
   "item.chemica.gold_ore_dust": "Gold Ore Dust",
-  "item.chemica.redstone_ore_dust": "Redstone Ore Dust",
-  "item.chemica.iron_ore_dust": "Iron Ore Dust",
-  "item.chemica.malachite_ore_dust": "Malachite Ore Dust"
+  "item.chemica.redstone_ore_dust": "Redstone Ore Dust"
 }
